<resources>
    <string name="app_name">opencv学习</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_image_fill">ImageFillActivity</string>

    <string name="photo_face">Photo with faces</string>
    <string name="photo_noface">Photo without faces</string>
    <string name="title_activity_opencv_main">OpencvMainActivity</string>
    <string name="title_activity_morphological">MorphologicalActivity</string>
    <string name="title_activity_edge_detect">EdgeDetectActivity</string>
    <string name="title_activity_opencv_sample_list">OpencvSampleListActivity</string>
    <string name="title_activity_angular_point">AngularPointActivity</string>
    <string name="title_activity_hough_transformation">HoughTransformationActivity</string>
    <string name="title_activity_object_detect">ObjectDetectActivity</string>

    <string name="action_calibrate">Calibrate</string>
    <string name="calibration">Calibration</string>
    <string name="undistortion">Undistortion</string>
    <string name="comparison">Comparison</string>
    <string name="preview_mode">Preview mode</string>
    <string name="calibration_successful">Successfully calibrated!\nAvg. re-projection error:</string>
    <string name="calibration_unsuccessful">Unsuccessful calibration.\nTry again</string>
    <string name="more_samples">Please, capture more samples</string>
    <string name="calibrating">Calibrating...</string>
    <string name="please_wait">Please, wait</string>
    <string name="original">Original</string>
    <string name="undistorted">Undistorted</string>


    <color name="compass_setting_bg">#0288d1</color>
    <color name="compass_setting_text_color">#ffffff</color>
    <color name="compass_setting_gps_bg">#026da7</color>

    <string name="grant_access_title">"Grant access"</string>
    <string name="grant_access_comment">"Change permission in your device’s\napp settings. Give Compass access\nto Location and GPS."</string>
    <string name="settings">"Settings >"</string>
    <string name="exit">"Exit"</string>
    <string name="turn_camera_comment">"To use real view mode, grant access to Camera"</string>
    <string name="try_realview_title">"Try real view mode"</string>
    <string name="try_realview_comment">"Let compass show direction with a real view of your surroundings"</string>
    <string name="try_bt">"Try"</string>
    <string name="later_bt">"Later"</string>
    <string name="title_activity_feature_detect">FeatureDetectActivity</string>
    <string name="title_activity_id_card_detect">IdCardDetectActivity</string>
    <string name="title_activity_opencv_face_detect">OpencvFaceDetectActivity</string>
    <string name="title_activity_hog_svmpeople">HogSVMPeopleActivity</string>
    <string name="title_activity_trace_object">TraceObjectActivity</string>

    <string name="action_load_first_image">Load Image</string>

    <string name="action_about">about</string>
    <string name="action_view_file">viewFile</string>
    <string name="action_view_image">viewImage</string>
    <string name="Pick">选择图片</string>
    <string name="planedetect">车牌检测</string>
    <string name="str_proc">Car Plate Detection and Recognition</string>
    <string name="wait_detect">等待检测.</string>
    <string name="title_activity_slope_correct">SlopeCorrectActivity</string>
    <string name="title_activity_camera">CameraActivity</string>

    <!-- http -->
    <string name="httpError">连接失败</string>
    <string name="httpisNull">没有网络</string>

</resources>
