<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/compass_setting_bg">

    <TextView
        android:id="@+id/tv_grantaccess_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:textSize="24sp"
        android:textColor="@color/compass_setting_text_color"
        android:text="@string/grant_access_title" />
    <TextView
        android:id="@+id/tv_grantaccess_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_grantaccess_title"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="24dp"
        android:textSize="16sp"
        android:textColor="@color/compass_setting_text_color"
        android:text="@string/grant_access_comment" />
    <ImageView
        android:id="@+id/iv_gps"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_below="@+id/tv_grantaccess_comment"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_circle"
        android:scaleType="centerInside"
        android:src="@drawable/ic_gps"/>
    <LinearLayout
        android:id="@+id/ll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_gps"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <View
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_circle"
            />
        <View
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_circle"
            />
        <View
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_circle"
            />
        <View
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_circle"
            />
        <View
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_circle"
            />
    </LinearLayout>
    <ImageView
        android:id="@+id/iv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_view"
        android:layout_above="@+id/rl_botton_bt"
        android:layout_centerHorizontal="true"
        android:src="@drawable/phone"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/iv_phone"
        android:layout_marginTop="16dp"
        android:background="#ffffff"
        />

    <RelativeLayout
        android:id="@+id/rl_botton_bt"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/bt_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="16sp"
            android:textColor="@color/compass_setting_text_color"
            android:text="@string/exit"
            android:background="@android:color/transparent"
            android:onClick="exit"
            />

        <Button
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="16sp"
            android:textColor="@color/compass_setting_text_color"
            android:text="@string/settings"
            android:background="@android:color/transparent"
            android:onClick="goSetting"
            />


    </RelativeLayout>

</RelativeLayout>
